# splines

./: .gitignore  README.md  pyproject.toml
examples/: example_usage.py
src/splines/: __init__.py  parametric_splines.py
tests/: test_parametric_splines.py
