[project]
name = "splines"
version = "0.1.0"
description = ""
authors = [
    {name = "Pradyumna Harish",email = "harishpradyumna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly (>=6.5.0,<7.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "splines", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
